Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.1.36, 10.2.18, 10.3(EOL)
Description
Several bugs in Galera lead to sporadic failures when testing MariaDB server with the mtr due to false error messages (or warnings) that are not related to the new fixes:
1) Some mtr tests sometimes fails due to
warnings.[Warning] WSREP: gcs_caused() returned -1
2) Some mtr tests sometimes fails due to
warnings.[Warning] WSREP: Failed to report last committed <number>
3) Some mtr test sometimes fails when node is evicted from the cluster in middle of SST.
4) If SST fails due to a network error, the node that acted as a donor sometimes does not return to its original state, which leads to failure due to the inability to continue the test execution (due to a timeout).